--- a/day1_victrola/src/main/AndroidManifest.xml
+++ b/day1_victrola/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.andreiverdes.training.expleo.victrola">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
@@ -10,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -20,9 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.ForegroundMusicService" />
+        <service
+            android:name=".services.ForegroundMusicService"
+            android:exported="false"/>
         <service android:name=".services.BoundMusicService" />
-        <service android:name=".services.BackgroundMusicService" />
+        <service
+            android:name=".services.BackgroundMusicService"
+            android:exported="false"/>
     </application>
 
 </manifest>
