--- a/day1_victrola/build.gradle
+++ b/day1_victrola/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation  "io.noties.markwon:core:4.2.1"
+    implementation "androidx.work:work-runtime:2.3.2"
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
