--- a/client/build.gradle
+++ b/client/build.gradle
@@ -2,11 +2,28 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.squareup.okhttp3:okhttp:4.2.2"
+    implementation "com.squareup.okhttp3:okhttp:4.4.0"
     api 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
     implementation 'com.squareup.retrofit2:converter-moshi:2.7.2'
+
+    testImplementation "junit:junit:4.13"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.4.0"
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+task testJar(type: Jar, dependsOn: testClasses) {
+    baseName = "test-${project.archivesBaseName}"
+    from sourceSets.test.output
+}
+
+configurations {
+    tests
+}
+
+artifacts {
+    tests testJar
+}
+
+
+sourceCompatibility = "8"
+targetCompatibility = "8"
