--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -31,10 +31,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
 
     api  "io.noties.markwon:core:4.2.1"
-    implementation 'junit:junit:4.13'
+    implementation 'junit:junit:4.12'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
